OSC: Add missing color profile (dark text), fix the wrong color assignments in data

--- a/src/css/scss/modules/sony_one_carousel.scss
+++ b/src/css/scss/modules/sony_one_carousel.scss
@@ -502,13 +502,13 @@
       }
       //tL
       &.light-text-trans-panel {
+
         .headline {
           color: $gray50;
-
         }
 
         a {
-          color:$white;
+          color: $white;
         }
 
         .counter {
@@ -525,8 +525,13 @@
       }
       //tD
       &.dark-text-trans-panel {
-        .headline {
 
+        .headline {
+          color: $gray40;
+
+          a {
+            color: $black;
+          }
         }
 
         .counter {
@@ -538,7 +543,7 @@
         }
 
         .eyebrow {
-
+          color: $gray40;
         }
       }
       //tBW
